tests/error/0023.exl
let
    a = a
        ^ERROR
in
    a
